created staffs and staffInfoUpdate page

--- a/src/components/dashboard/dashboard-styles.css
+++ b/src/components/dashboard/dashboard-styles.css
@@ -12,7 +12,7 @@
   padding-top: 3rem;
   min-width: 100vw;
   min-height: 100vh;
-  background-color: rgb(236, 233, 233);
+  background-color: #ffffff;
 }
 .box-container {
   display: flex;
