--- a/src/components/complaints/complaints-styles.css
+++ b/src/components/complaints/complaints-styles.css
@@ -1,9 +1,8 @@
-.notice-header {
+.complaints-header {
   text-align: center;
   margin-top: 2.5rem;
-  color: rgb(39, 88, 88);
 }
-.notice-container {
+.complaints-container {
   margin-top: 3rem;
 }
 .delete-btn {
