--- a/src/components/dashboard/dashboard-styles.css
+++ b/src/components/dashboard/dashboard-styles.css
@@ -6,30 +6,56 @@
   color: white;
   min-height: 12.5rem;
   margin-top: -3rem;
+
   margin-bottom: -1.5rem;
 }
 .dashboard-container {
   padding-top: 3rem;
   min-width: 100vw;
   min-height: 100vh;
+
   background-color: #ffffff;
 }
 .box-container {
   display: flex;
-  background-color: red;
+
   color: white;
   flex-direction: column;
   text-align: center;
   width: 20rem;
+  background-color: rgb(0, 200, 255);
   padding-top: 1.5rem;
   margin-left: 2rem;
+  margin-bottom: 1rem;
+}
+.box-row {
+  padding-left: 2.5rem;
+}
+.staff-chat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15vh 15vw;
+}
+.staff-title {
+  margin-bottom: -10rem;
 }
 .dashboard-title {
   text-align: center;
   font-family: Roboto -apple-system, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-bottom: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.leaves-title {
+  text-align: center;
+  font-family: Roboto -apple-system, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 1rem;
 }
 .dashboard-title h1 {
+  font-size: 3rem;
+  color: rgb(39, 88, 88);
+}
+.leaves-title h1 {
   font-size: 3rem;
   color: rgb(39, 88, 88);
 }
